- FIX: subset_data() - fix for failure with inspect() objects
- FIX: format_time() - fix for not appending new numeric time column onto a data.table
- FIX: format_time() - fix for data.frames columns being renamed on return (by using data.frame instead of cbind)
- FIX: auto_rate() - Fix for plots failing where result contains an NA (fix in multi.p() involving clip)



Changes
- CHANGE: format_time - numeric time column name changed from `elapsed` to `time.num` (elapsed is not a good term for non-english speakers)
- CHANGE: Documentation - terminology clarifed. Rates now referred to as absolute (for whole animal or chamber) or mass specific.
  - (ugh, might have to revist the above - we use absolute in subset_rate for absolute value between +/-... )
- CHANGE: Updated startup message for full MEE citation
- CHANGE: import_file docs - updated supported systems list
- CHANGE: Updated README
- CHANGE: Better original par() restoration behaviour (TIL: put them next to each other at start and use on.exit() to restore and it stills works if there is some sort of plotting error that causes it to exit early)
- CHANGE: inspect_data and pcrit now have 'function deprecated' warnings in docs and code
- CHANGE: adjust_rate - changed rates from 'corrected' to 'adjusted.rate' in output (updated code in convert_rate, convert_DO to match)
- CHANGE: convert_rate - outputs renamed (e.g. output to output.rate, absolute to absolute.rate etc.). should not affect code anywhere else since this is last function
- CHANGE: calc_rate - Detects and warns if multi-column input (matches auto_rate behaviour)
- CHANGE: calc_rate.bg - Stops if 'oxygen' or 'time' columns not present in the input
- CHANGE: calc_rate.bg - Stops if 'oxygen' and 'time' columns conflict




========================== inspect() ============================
Changes

- CHANGE: `time = 1` and `oxygen = 2` the defaults rather than NULL
- CHANGE: if `oxygen = NULL` now inspects ALL columns